--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 <body>
     
 
+<input type="date">
+<input type="time">
+<input type="month">
 
-  
+
+<input type="email" name="" id="email">
+<input type="password" name="" id="pass">
+
+<button   onclick="signin()">Login</button>
+      
+
+
 
     <script src="script.js"></script>
 </body>
