--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 
-<input type="date">
+<!-- <input type="date">
 <input type="time">
 <input type="month">
 
@@ -17,10 +17,33 @@
 <input type="email" name="" id="email">
 <input type="password" name="" id="pass">
 
-<button   onclick="signin()">Login</button>
-      
+<button   onclick="greeting()">Login</button>
+       -->
 
 
+
+<!--        
+    <input type="text" id="userInp" onkeypress="checkProduct(event)" >
+    <div id="add"></div> -->
+
+
+    <!-- <button onmouseenter="sayHello()">Click me</button>
+
+<input type="text" onkeydown="checkKey(event)" placeholder="Type something">
+
+
+
+<div onmouseover="hoverIn(event)" onmouseout="hoverOut(event)" 
+     style="width:200px; height:100px; background:lightblue;">
+    Hover on me
+</div>
+
+
+
+
+<div onmouseover="showDetails(event)" style="width:200px;height:100px;background:lightblue;">
+  Hover here
+</div> -->
 
     <script src="script.js"></script>
 </body>
