Updated practice code

--- a/index.html
+++ b/index.html
@@ -45,6 +45,39 @@
   Hover here
 </div> -->
 
+
+<!-- <input type="text" name="input" id="prompt" value="pakistan">
+ <div id="one"> hello world</div>
+<p class="para">Lorem ipsum doloritatis libero nostrum t</p> 
+    <input type="email" name="Email" />
+    <div class="para">this is blue</div> 
+
+    <input type="text" name="" id="" class="djsd"> -->
+
+<!-- <input type="text" id="inputbox">
+<div id="box" style="display: none;"></div>
+<button onclick="val()">sumbit</button> -->
+
+
+
+
+<!-- <input type="password" name="Email" id="pass"/>
+<input type="checkbox" name="" id="checkBox" onchange="val()">
+<button onclick="logIn()">login</button> -->
+
+
+<div id="main" class="main light"></div>
+<button class="btn" onclick="modes()" ><i class="fa-solid fa-moon" id="ixcon"></i></button>
+
+
+<!-- <input type="text" id="task">
+<button class="btn" onclick="val()">click</button>
+<div >
+    <ul id="main"> 
+
+    </ul>
+</div> -->
+
     <script src="script.js"></script>
 </body>
 </html>
