Updated hero section and fixed media queries

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
     </ul>
 </div> -->
 
+
+
+<p id=" para">Lorem ipsum dolor, sitnsequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendus equuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendusequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendusequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendusequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendus...<BUTton onclick="click()" id="clivck">readmore</BUTton></p>
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
