Updated show more or show less code

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
 
 
 
-<p id=" para">Lorem ipsum dolor, sitnsequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendus equuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendusequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendusequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendusequuntur facictio repellendus.uuntur facictio repellendusuuntur facictio repellendusuuntur facictio repellendus...<BUTton onclick="click()" id="clivck">readmore</BUTton></p>
+<p id="para">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+  Sequi doloremque repellendus repudiandae!
+</p>
+  <button onclick="showMore()" id="clivck">Read more</button>
 
+<div id="empty"></div>
 
 
 
