Updated class practice

--- a/index.html
+++ b/index.html
@@ -81,14 +81,19 @@
 </div> -->
 
 
-
+<!-- 
 <p id="para">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
   Sequi doloremque repellendus repudiandae!
 </p>
   <button onclick="showMore()" id="clivck">Read more</button>
 
-<div id="empty"></div>
+<div id="empty"></div> -->
+
+
+<input type="text" onkeydown="mssgSend(event)">
+<ul id="empty"></ul>
+
 
 
 
