es6 practice started

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
 <div id="empty"></div> -->
 
-
+<!-- 
 <input type="text" onkeydown="mssgSend(event)">
-<ul id="empty"></ul>
+<ul id="empty"></ul> -->
 
 
 
