practice for test code

--- a/index.html
+++ b/index.html
@@ -94,7 +94,25 @@
 <input type="text" onkeydown="mssgSend(event)">
 <ul id="empty"></ul> -->
 
+<!-- <a href="JavaScript:void(0)" onclick="alert('jjj');">bfdafdb</a>
+<a href="JavaScript:void(0)" onClick="alert('Hi');">Click</a> -->
 
+
+<!-- <img 
+  onmouseover="this.src='https://assets-v2.lottiefiles.com/a/49847160-3f53-11ef-8109-cbcc69139eb2/fZaPRJe15G.gif'" 
+  onmouseout="this.src='https://img.freepik.com/free-psd/black-isolated-car_23-2151852894.jpg?semt=ais_hybrid&w=740&q=80'" 
+  src="https://img.freepik.com/free-psd/black-isolated-car_23-2151852894.jpg?semt=ais_hybrid&w=740&q=80" 
+  alt="Car Image"> -->
+<!-- 
+<input type="text" > -->
+
+
+<!-- <div class="main">
+  <img  id="character " class="character" src="one.gif" alt="">
+</div>
+ -->
+
+<input type="text" onFocus="this.style.backgroundColor='yellow';" onBlur="this.style.backgroundColor='white';">
 
 
     <script src="script.js"></script>
