updated pracrice code

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </div>
  -->
 
-<input type="text" onFocus="this.style.backgroundColor='yellow';" onBlur="this.style.backgroundColor='white';">
+<!-- <input type="text" onFocus="this.style.backgroundColor='yellow';" onBlur="this.style.backgroundColor='white';"> -->
 
 
     <script src="script.js"></script>
